[project]
name = "hyper-agent"
version = "0.1.0"
description = "A Python SDK for interacting with Zerion API"
authors = [
    { name = "Tu Nguyen", email = "tucq88@gmail.com" }
]
dependencies = [
    "aiohttp>=3.8.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
zerion = "hyper_agent.zerion.cli:zerion"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "responses>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/hyper_agent --cov-report=term-missing"
asyncio_mode = "auto"